--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
     "@nestjs/common": "^5.4.0",
     "@nestjs/core": "^5.4.0",
     "@nestjs/graphql": "^5.4.0",
+    "@nestjs/mongoose": "^5.2.2",
     "apollo-server-express": "^2.3.1",
+    "aws-sdk": "^2.417.0",
     "class-transformer": "^0.2.0",
     "class-validator": "^0.9.1",
+    "dotenv": "^6.2.0",
     "graphql": "^14.0.2",
     "lodash": "^4.17.11",
     "moment": "^2.23.0",
+    "mongoose": "^5.4.17",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.2.2",
