--- a/package.json
+++ b/package.json
@@ -23,15 +23,20 @@
     "@nestjs/core": "^5.4.0",
     "@nestjs/graphql": "^5.4.0",
     "@nestjs/mongoose": "^5.2.2",
+    "@nestjs/passport": "^5.1.0",
+    "@types/jsonwebtoken": "^8.3.2",
     "apollo-server-express": "^2.3.1",
     "aws-sdk": "^2.417.0",
     "class-transformer": "^0.2.0",
     "class-validator": "^0.9.1",
     "dotenv": "^6.2.0",
     "graphql": "^14.0.2",
+    "jsonwebtoken": "^8.5.0",
     "lodash": "^4.17.11",
     "moment": "^2.23.0",
-    "mongoose": "^5.4.17",
+    "mongoose": "^5.4.19",
+    "passport": "^0.4.0",
+    "passport-http-bearer": "^1.0.1",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.2.2",
@@ -41,6 +46,7 @@
     "@nestjs/testing": "^5.1.0",
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.1",
+    "@types/mongoose": "^5.3.22",
     "@types/node": "^10.7.1",
     "@types/supertest": "^2.0.5",
     "jest": "^23.5.0",
