--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "@nestjs/graphql": "^5.4.0",
     "@nestjs/mongoose": "^5.2.2",
     "@nestjs/passport": "^5.1.0",
+    "@types/ejs": "^2.6.3",
     "@types/jsonwebtoken": "^8.3.2",
     "apollo-server-express": "^2.3.1",
     "aws-sdk": "^2.417.0",
     "class-transformer": "^0.2.0",
     "class-validator": "^0.9.1",
     "dotenv": "^6.2.0",
+    "ejs": "^2.6.1",
     "graphql": "^14.0.2",
     "jsonwebtoken": "^8.5.0",
     "lodash": "^4.17.11",
