--- a/.env-production
+++ b/.env-production
@@ -1,8 +1,1 @@
-AWS_ACCESS_KEY_ID=AWS_ACCESS_KEY_ID
-AWS_SECRET_ACCESS_KEY=AWS_SECRET_ACCESS_KEY
-MONGODB_URI=mongodb://localhost/fitapp
-EMAIL_SENDER=fitapp@johnsonunlimited.co
-EMAIL_REPLY_TO=fitapp@johnsonunlimited.co
-API_ROOT_URL=http://fitapp-dev-env.us-east-1.elasticbeanstalk.com/
-FITAPP_ANDROID_LINK=https://play.google.com/store/apps/details?id=com.facebook.katana
-FITAPP_IOS_LINK=https://itunes.apple.com/us/app/facebook/id284882215
+MONGODB_URI=mongodb://localhost/cam-dictionary
